integration_tests/codegen_fail/fail/scalar_value/multiple_unnamed_fields.rs
#[derive(juniper::GraphQLScalarValue)]
enum ScalarValue {
    Variant(u32, i64),
}

fn main() {}
